--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <center>
     <div id="app"></div>
-    <img src="rasp.jpeg">
+    <img src="rasp.jpg">
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
