--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
+    body{
+        background-color: #ff6666
+    }
 <body>
     <center>
+    
     <div id="app"></div>
     <img src="/rasp.jpg">
+        
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
