--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
-    body{
-        background-color: #ff6666
-    }
-<body>
+
+<body bgcolor="#ff6666">
     <center>
     
     <div id="app"></div>
