--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <center>
     
     <div id="app"></div>
-    <img src="/rasp.jpg">
-        
+    <img src="rasp.jpg">
+    <br>   
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
