--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div id="app"></div>
     <br><br><br><br><br>
-        <img src="rasp.jpg">
+        <img src="/rasp.jpg">
   
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
