--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <center>
     
     <div id="app"></div>
-    <br><br><br><br><br>
-        <img src="/rasp.jpg">
+    <img src="rasp.jpg">
   
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
